grammar.js
    source_file: $ =>
      prec.left(
        repeat(
          choice(
            $.package,
            $.fragment,
            $._dollar,
          ),
        ),
      ),

    _line_terminator: $ => seq(optional('\r'), '\n'),

    fragment: $ =>
      prec.left(seq(repeat1(seq($._top_level_statement, $._line_terminator)), optional($._dollar))),

    _dollar: $ => token(seq('$', optional('\r'), '\n')),

    method: $ =>
      prec.left(
        seq(
          optional(alias(/_abstract/i, '_abstract')),
          optional(alias(/_private/i, '_private')),
          optional(alias(/_iter/i, '_iter')),
          alias(/_method/i, '_method'),
          field('exemplarname', $.identifier),
          choice(
            seq(
              '.', field('name', $.identifier),
              optional(choice(
                seq(
                  '(',
                  optional(seq($.argument, repeat(seq(',', $.argument)))),
                  optional(seq(optional(','), alias(/_optional/i, '_optional'), $._arguments)),
                  optional(seq(optional(','), alias(/_gather/i, '_gather'), $.argument)),
                  ')', optional(seq(choice('<<', '^<<'), $._arguments))),
                seq('[', optional($._arguments), ']', optional(seq(choice('<<', '^<<'), $._arguments))),
                seq(choice('<<', '^<<'), $._arguments),
              ))),
            seq('[', optional($._arguments), ']', optional(seq(choice('<<', '^<<'), $._arguments)))),
          $._line_terminator,
          optional($.documentation),
          optional($._codeblock),
          alias(/_endmethod/i, '_endmethod'),
        ),
      ),

    // [_iter] _proc [@ <identifier>] ( [ <arguments> ] )
    // <block body>
    // _endproc
    argument: $ => $._identifier,

    _arguments: $ => prec.right(seq($.argument, repeat(seq(',', $.argument)), optional(','))),

    // _block [ @ <identifier> ]
    //   <statements>
    //   [ >> <rvalue tuple> ]
    // _endblock
    block: $ =>
      prec.left(
        seq(alias(/_block/i, '_block'), optional($.label), optional($._codeblock), alias(/_endblock/i, '_endblock')),
      ),

    assignment: $ =>
      prec.left(PREC.ASSIGN,
        seq($._expression,
          choice('<<', '^<<', '_and<<', '_andif<<', '_or<<', '_orif<<', '_xor<<', '**<<', '**^<<', '*<<', '*^<<', '/<<', '/^<<', '_mod<<', '_div<<', '-<<', '-^<<', '+<<', '+^<<'),
          $._expression),
      ),

    // _if <condition1>
    // _then
    //  <block body>
    // [ _elif <condition2>
    //   _then
    //     <block body> ]
    //     ...
    // [ _else
    //   <block body> ]
    // _endif
    if: $ =>
      seq(alias(/_if/i, '_if'),
        field('condition', $._expression),
        alias(/_then/i, '_then'),
        optional($._codeblock),
        repeat($.elif),
        optional($.else),
        alias(/_endif/i, '_endif'),
      ),

    elif: $ => seq(alias(/_elif/i, '_elif'), field('condition', $._expression), alias(/_then/i, '_then'), optional($._codeblock)),

    else: $ => seq(alias(/_else/i, '_else'), optional($._codeblock)),

    // _loop [ @ <identifier> ]
    //  <block body>
    // _endloop
    throw: $ => prec.left(seq(alias(/_throw/i, '_throw'), $._expression, optional(seq(alias(/_with/i, '_with'), $._expression_list)))),

    // _primitive <number>
    loopbody: $ =>
      seq(
        alias(/_loopbody/i, '_loopbody'),
        '(', seq($._expression, repeat(seq(',', $._expression))), ')',
      ),

    // _leave [ @ <identifier> ] [_with <rvalue tuple> ]
    protect: $ =>
      seq(
        alias(/_protect/i, '_protect'),
        optional(seq(alias(/_locking/i, '_locking'), $._expression, $._terminator)),
        optional($._codeblock),
        alias(/_protection/i, '_protection'),
        optional($._codeblock),
        alias(/_endprotect/i, '_endprotect'),
      ),

    // _lock <expression>
    //   <block body>
    // _endlock
    pragma: $ => prec.left(seq(alias(/_pragma/i, '_pragma'), /(.*)/)),

    string_literal: $ =>
      choice(
        seq('"', repeat(choice(/[^"\n]/, /(.|\n)/)), '"'),
        seq('\'', repeat(choice(/[^'\n]/, /(.|\n)/)), '\''),
      ),

    // /<pattern>/<flags>
    call: $ =>
      prec.right(PREC.CALL,
        seq(
          field('receiver', $._expression),
          field('operator', '.'),
          field('message', $.identifier),
          optional(choice(
            seq('(', optional($._expression_list), ')'),
            seq('<<', optional($._expression_list)))),
        ),
      ),

    _expression_list: $ =>
      prec.right(seq($._expression, repeat(seq(',', $._expression)))),

    true: $ => alias(/_true/i, '_true'),
    false: $ => alias(/_false/i, '_false'),
    maybe: $ => alias(/_maybe/i, '_maybe'),
    unset: $ => alias(/_unset/i, '_unset'),
    self: $ => alias(/_self/i, '_self'),
    _terminator: $ =>
      choice(';', $._line_terminator),

    _top_level_statement: $ => choice(
      $._definition,
      $._method_declaration,
      $._expression,
      $._global_assignment,
    ),

    _expression: $ => choice(
      $.handling,
      $.return,
      $.leave,
      $.continue,
      $.catch,
      $.throw,
      $.primitive,
      $.block,
      $.iterator,
      $.while,
      $.if,
      $.loop,
      $.try,
      $.loopbody,
      $.protect,
      $.lock,
      choice(
        $.parenthesized_expression,
        $.call,
        $.procedure,
        $.invoke,
        $.slot_accessor,
        $.indexed_access,
        $.gather,
        $.scatter,
        $.allresults,
        $.class,
        $.assignment,
        $.logical_operator,
        $.relational_operator,
        $.arithmetic_operator,
        $.unary_operator,
        $._literal,
        $._variable,
      ),
    ),

    _codeblock: $ => seq(
      choice($._expression, $._defvar),
      repeat(seq($._terminator, choice($._expression, $._defvar))),
      optional($._terminator)),

    return: $ =>
      prec.right(
        choice(
          seq(alias(/_return/i, '_return'), optional($._expression_list)),
          seq('>>', $._expression_list),
        ),
      ),

    parenthesized_expression: $ => seq('(', $._expression_list, ')'),

    label: $ =>
      /@\s?(\|[\p{L}\p{N}_?.!]*\||[\p{L}\p{N}_?!]+)+/u,

    number: $ => token(
      choice(
        seq(
          choice(/\p{N}+/u, /\p{N}+\.\p{N}+/u),
          optional(seq(/[eE&][+-]?/, /\p{N}+/u))),
        /(?:[2-9]|[1-2]\d|3[0-6])[rR][a-zA-Z0-9]+/)),

    variable: $ => prec.left($._identifier),

    global_reference: $ => token(seq('@', optional(seq(ID_REGEX, ':')), ID_REGEX)),

    identifier: $ => $._identifier,

    _identifier: $ => ID_REGEX,

    relational_operator: $ =>
      prec.right(PREC.RELATIONAL,
        seq(
          field('left', $._expression),
          field('operator', choice(alias(/_is/i, '_is'), alias(/_isnt/i, '_isnt'), alias(/_cf/i, '_cf'), '=', '~=', '<>', '>=', '<=', '<', '>')),
          field('right', $._expression),
        ),
      ),

    logical_operator: $ =>
      prec.left(PREC.BOOLEAN,
        seq(
          field('left', $._expression),
          field('operator', choice(alias(/_and/i, '_and'), alias(/_or/i, '_or'), alias(/_xor/i, '_xor'), alias(/_andif/i, '_andif'), alias(/_orif/i, '_orif'))),
          field('right', $._expression),
        ),
      ),

    symbol: $ => /:(\|[^|]*\||\\.|[\p{L}\p{N}_?!]+)+/u,

    documentation: $ => prec.right(repeat1(/##.*/)),
    comment: $ => token(prec(PREC.COMMENT, /#.*/)),
  },
});
