test/corpus/protect.txt
================================================================================
protect statement
================================================================================

_block
	stream << external_text_input_stream.new(a_file_name)
	_protect
		stream.write("something")
	_protection
		stream.close()
	_endprotect
_endblock
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (block
      (assignment
        (variable)
        (call
          (variable)
          (identifier)
          (expression_list
            (variable))))
      (protect
        (call
          (variable)
          (identifier)
          (expression_list
            (string_literal)))
        (call
          (variable)
          (identifier))))))

================================================================================
protect locking statement
================================================================================

_block
	stream << external_text_input_stream.new(a_file_name)
	_protect _locking _self
		stream.write("something")
	_protection
		stream.close()
	_endprotect
_endblock
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (block
      (assignment
        (variable)
        (call
          (variable)
          (identifier)
          (expression_list
            (variable))))
      (protect
        (self)
        (call
          (variable)
          (identifier)
          (expression_list
            (string_literal)))
        (call
          (variable)
          (identifier))))))
