test/corpus/throw.txt
================================================================================
throw
================================================================================

_throw :error
$

_throw @error
$

_throw "error"
$

_throw :error _with a
$

_throw :error _with a, b
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (throw
      (symbol)))
  (fragment
    (throw
      (global_reference)))
  (fragment
    (throw
      (string_literal)))
  (fragment
    (throw
      (symbol)
      (expression_list
        (variable))))
  (fragment
    (throw
      (symbol)
      (expression_list
        (variable)
        (variable)))))
